# numexpr_preparser

./: .gitignore  LICENSE  README.md  numexpr_expression_parser_test.py  pyproject.toml
numexpr_preparser/: parser.py  parser_test.py
